# hub_audio

./: CMakeLists.txt  LICENSE  README.md
libs/openWakeWord/: CMakeLists.txt  MelConverter.cpp  MelConverter.h
src/: CMakeLists.txt  main.cpp
